--- a/package.json
+++ b/package.json
@@ -6,8 +6,18 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.8",
+    "bootstrap": "^5.3.3",
+    "dayjs": "^1.11.10",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
+    "react-bootstrap-pagination-control": "^1.0.5",
+    "react-datepicker": "^6.4.0",
     "react-dom": "^18.2.0",
+    "react-google-charts": "^4.0.1",
+    "react-loading": "^2.0.3",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
